--- a/_posts/2023-04-18-about-me.md
+++ b/_posts/2023-04-18-about-me.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: first post
-description: This is a first post
-summary: This is a summary
-tags: [tag]
+title: about me
+description:
+summary:
+tags: [me]
 ---
 
 Lorem ipsum dolor amet tousled viral art party blue bottle single-origin coffee cardigan, selvage man braid helvetica. Banh mi taxidermy meditation microdosing. Selvage cornhole YOLO, small batch vexillologist raclette VHS prism sustainable 8-bit ugh semiotics letterpress disrupt pop-up. Celiac shabby chic ugh, jianbing whatever kitsch tattooed edison bulb kogi irony etsy.
