--- a/_posts/2023-04-22-about.md
+++ b/_posts/2023-04-22-about.md
@@ -11,3 +11,5 @@ Hey 👋🏼 I'm Sam.
 Here I share things that I think are cool.
 
 Generally, I find technology cool because it has a way of solving practical problems at scale and simplify things. So I will probably be sharing my thoughts about it and a slew of other random topics in this space. Hope you find it useful.
+
+Buy me [coffee ☕️](https://www.buymeacoffee.com/samuelwjlee) if you feel like being awesome :)
